Bug 128171 - nicks with square brackets are never highlighted
Summary: nicks with square brackets are never highlighted
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chat Window (other bugs)
Version First Reported In: 0.12.6
Platform: openSUSE Linux
: LO normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-28 08:49 UTC by Max
Modified: 2008-12-25 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Max 2006-05-28 08:49:39 UTC
Version:           0.10.3 (using KDE KDE 3.4.2)
Installed from:    SuSE RPMs
Compiler:          using suse 10.0 rpms on amd64 
OS:                Linux

If my nick is [max-] then I get highlighting in any message that starts with <any letter>'m

For example message "I'm thinking of whatever" is highlighted as if it contained my nick.

This looks like its using regular expressions and does not espace the [] properly.
Comment 1 Will Stephenson 2006-11-06 00:34:49 UTC
now it's the other way round.
Comment 2 Roman Jarosz 2008-12-25 16:15:32 UTC
SVN commit 901466 by rjarosz:

Escape regexp characters from nickname when looking for nickname in message body and also don't use \\b because it doesn't work if [] is in nickname.

BUG: 128171



 M  +7 -4      kopetechatsession.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=901466