Escape regexp characters from nickname when looking for nickname in message body and also don't use \\b because it doesn't work if [] is in nickname.

BUG: 128171


svn path=/trunk/KDE/kdenetwork/kopete/; revision=901466